--- a/shippable.yml
+++ b/shippable.yml
@@ -2,9 +2,6 @@ language: php
 
 php: 
   - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
   
 before_script: 
   - mkdir -p shippable/codecoverage
@@ -16,4 +13,4 @@ script:
 notifications:
    email: false
 
-      
+archive: true
