--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,8 @@
 language: php
-
+build_image: chetantarale/u12php:v1
 php: 
-  - 5.3
+  - 5.6
+  - 7.0
   
 before_script: 
   - mkdir -p shippable/codecoverage
