--- a/shippable.yml
+++ b/shippable.yml
@@ -3,7 +3,12 @@ build_image: drydock/u12php:tip
 php: 
   - 5.6
   - 7.0
-  
+
+before_install:
+  - cd /tmp/pickle
+  - printf '\n' | bin/pickle install intl
+  - cd /
+
 before_script: 
   - mkdir -p shippable/codecoverage
   - mkdir -p shippable/testresults
