--- a/shippable.yml
+++ b/shippable.yml
@@ -15,6 +15,7 @@ before_script:
   - mkdir -p shippable/testresults
 
 script:
+   - php -v
    - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage tests/calculator_test.php
 
 notifications:
