--- a/shippable.yml
+++ b/shippable.yml
@@ -1,8 +1,8 @@
 language: php
-build_image: drydock/u14php:tip
+build_image: chetantarale/u12php:changedphp5version
 php: 
   - 5.6
-  - 7.0
+  - '7.0'
 
 before_script: 
   - mkdir -p shippable/codecoverage
